package exam;

public interface Configuration {
    long freeShippingThresholdCents();

    long maximumWeightGrams();
}
