package exam;

public interface Notifier {
    void notify(String customerId, long validatedTotalCents);
}
