package exam;

public enum OrderState {
    BROUILLON,
    VALIDEE
}
